syntax = "proto3";

package traveler;

option java_multiple_files = true;
option java_package = "com.hna.rest.air.traveler";
option java_outer_classname = "TravelerInfoProto";

import "Common.proto";

service TravelerInfo {

    rpc createTravlers (AddTravelerRQ) returns (TravelerRS) {
    }

}

message AddTravelerRQ {
    string shoppingCartId = 1;
    Customer customer = 2;
    repeated Passenger passengers = 3;
}

message Customer {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string mobile = 4;
    string homePhone = 5;
}

message Passenger {
    string firstName = 2;
    string lastName = 3;
    string gender = 4;
    string dateOfBirth = 5;
    string type = 6;
    string email = 7;
    string mobile = 8;
    string idNo = 9;
    string idNoEffectiveDate = 10;
    string idNoExpiryDate = 11;
    string idNoType = 12;
    string idNoCountryCode = 13;
    string countryCode = 14;
}

message TravelerRS {
    string status = 1;
    string code = 2;
    string message = 3;
    common.ShoppingCart shoppingCart = 4;
}
